--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -617,7 +617,7 @@ hr {
   border-top: solid 1px #ddd;
 }
 
-table {
+/*table {
   width: 100%;
   border: 1px solid #ebebeb;
 }
@@ -630,7 +630,7 @@ td {
   font-weight: 300;
   text-align: center;
   border: 1px solid #ebebeb;
-}
+}*/
 
 form {
   padding: 20px;
