--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -28,7 +28,7 @@ html {
  */
 
 article,
-aside,
+/*aside,*/
 details,
 figcaption,
 figure,
@@ -205,11 +205,11 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 
-hr {
+/*hr {
   height: 0;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-}
+}*/
 
 /**
  * Contain overflow in all browsers.
