--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -205,11 +205,11 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 
-/*hr {
+hr {
   height: 0;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-}*/
+}
 
 /**
  * Contain overflow in all browsers.
@@ -799,6 +799,10 @@ ol {
 dl dd {
   font-style: italic;
   font-weight: 100;
+}
+
+.container{
+  display:inline-block;
 }
 
 footer {
