--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -565,14 +565,14 @@ header a.button {
   right: 0;
   background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
-aside a.button {
+/*aside a.button {
   display: block;
   width: 138px;
   padding-left: 64px;
   margin-bottom: 20px;
   font-size: 21px;
   background: transparent url(../images/download-button.png) 0 0 no-repeat;
-}
+}*/
 
 code, pre {
   margin-bottom: 30px;
@@ -791,7 +791,7 @@ footer {
   padding-bottom: 30px;
   margin-top: 40px;
   font-size: 13px;
-  color: #aaa;
+  /*color: #aaa;*/
   background: transparent url('../images/hr.png') 0 0 no-repeat;
 }
 
