--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -910,12 +910,12 @@ footer a:hover {
     display: inline;
     font-size: 13px;
   }
-  /*#main-content,
+  #main-content,
   aside#sidebar {
     float: none;
     width: 100% ! important;
   }
-  /*aside#sidebar {
+  aside#sidebar {
     min-height: 0;
     padding: 20px 0;
     margin-top: 20px;
@@ -924,7 +924,7 @@ footer a:hover {
   }
   aside#sidebar a.button {
     display: none;
-  }*/
+  }
   #main-content h1:before,
   #main-content h2:before,
   #main-content h3:before,
