--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -804,7 +804,7 @@ footer a:hover {
 }
 
 #copyright {
-    overflow:visible;
+    overflow:hidden;
     padding:30px;
     border-top:2px dotted #FF9933;
     background-color:#000000;
