--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -465,6 +465,13 @@ body {
   background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
 }
 
+body.container{
+  padding-top:50px; 
+  padding-bottom:50px;
+  border: hidden;
+
+}
+
 p {
   margin-top: 0;
 }
