--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -791,7 +791,7 @@ dl dd {
     /*font-size:1em;*/
 }
 
-#featured .container{
+#featured .info{
   padding-top:50px; 
   padding-bottom:50px;
   overflow:hidden;
