--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -864,7 +864,7 @@ footer a:hover {
 .fa-facebook{
     background-color:#0C516E;
 }
-.fa-twitter{
+.fa-linkedin{
     background-color:#8CA6D9;
 }
 .fa-instagram{
@@ -874,6 +874,8 @@ footer a:hover {
 
 .social{
   text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .clearfix {display: inline-block;}
