--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -802,6 +802,7 @@ dl dd {
 }
 /*===== FOOTER SECTION =====*/
 footer {
+  margin-top: 25px;
   padding-top: 20px;
   padding-bottom: 30px;
   margin-top: 40px;
@@ -874,8 +875,8 @@ footer a:hover {
 
 .social{
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .clearfix {display: inline-block;}
