--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -873,11 +873,10 @@ footer a:hover {
 }
 
 .social{
-  margin-top: 25px;
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
-  margin:0px auto;
+  height: 100%;
 }
 
 .clearfix {display: inline-block;}
