--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -874,8 +874,7 @@ footer a:hover {
 
 .social{
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 40px 40px 40px 40px;
   height: 100%;
 }
 
