--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -875,7 +875,7 @@ footer a:hover {
 .social{
   text-align: center;
   padding: 0px;
-  height: 100%;
+  height: 0px;
 }
 
 .clearfix {display: inline-block;}
