--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -873,9 +873,8 @@ footer a:hover {
 }
 
 .social{
+  margin-top: 25px;
   text-align: center;
-  padding: 0px;
-  height: 0px;
 }
 
 .clearfix {display: inline-block;}
