--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -876,6 +876,7 @@ footer a:hover {
   margin-top: 25px;
   margin-bottom: 25px;
   text-align: center;
+  height: auto;
 }
 
 .clearfix {display: inline-block;}
